update cn4