@@ -7,48 +7,40 @@
 
 package eu.darkcube.system.stats.api.user;
 
+import eu.cloudnetservice.driver.inject.InjectionLayer;
+import eu.cloudnetservice.modules.bridge.player.CloudOfflinePlayer;
+import eu.cloudnetservice.modules.bridge.player.PlayerManager;
+
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
-
-import de.dytanic.cloudnet.driver.CloudNetDriver;
-import de.dytanic.cloudnet.ext.bridge.player.ICloudOfflinePlayer;
-import de.dytanic.cloudnet.ext.bridge.player.IPlayerManager;
 
 public class StatsUserManager {
 
-	public static List<User> getOnlineUsers() {
-		List<User> ls = new ArrayList<>();
-		ls.addAll(CloudNetDriver.getInstance()
-				.getServicesRegistry()
-				.getFirstService(IPlayerManager.class)
-				.onlinePlayers()
-				.asPlayers()
-				.stream()
-				.map(s -> new User(s.getName(), s.getUniqueId()))
-				.collect(Collectors.toList()));
-		return ls;
-	}
+    public static List<User> getOnlineUsers() {
+        return new ArrayList<>(InjectionLayer
+                .boot()
+                .instance(PlayerManager.class)
+                .onlinePlayers()
+                .players()
+                .stream()
+                .map(s -> new User(s.name(), s.uniqueId()))
+                .toList());
+    }
 
-	public static User getOfflineUser(UUID uuid) {
-		ICloudOfflinePlayer op = CloudNetDriver.getInstance()
-				.getServicesRegistry()
-				.getFirstService(IPlayerManager.class)
-				.getOfflinePlayer(uuid);
-		return new User(op.getName(), op.getUniqueId());
-	}
+    public static User getOfflineUser(UUID uuid) {
+        CloudOfflinePlayer op = InjectionLayer.boot().instance(PlayerManager.class).offlinePlayer(uuid);
+        return new User(op.name(), op.uniqueId());
+    }
 
-	public static List<User> getOfflineUser(String name) {
-		List<User> ls = new ArrayList<>();
-		ls.addAll(CloudNetDriver.getInstance()
-				.getServicesRegistry()
-				.getFirstService(IPlayerManager.class)
-				.getOfflinePlayers(name)
-				.stream()
-				.map(s -> new User(s.getName(), s.getUniqueId()))
-				.collect(Collectors.toList()));
-		return ls;
-	}
+    public static List<User> getOfflineUser(String name) {
+        return new ArrayList<>(InjectionLayer
+                .boot()
+                .instance(PlayerManager.class)
+                .offlinePlayers(name)
+                .stream()
+                .map(s -> new User(s.name(), s.uniqueId()))
+                .toList());
+    }
 
 }
